export const translations = {
    es: {
        login: {
            title: "INICIAR",
            user: "Usuario",
            password: "Contraseña",
            forgot: "¿Olvidaste tu contraseña?",
            signIn: "Iniciar Sesión",
            createAccount: "Crear Cuenta",
            warn: "Advertencia",
            authError: "Autenticación Incorrecta",
            serverError: "Error en el servidor\nContacte al Administrador",
            fillAll: "Completa todos los campos",
            offlineNoUser: "No hay internet y no se consiguió el usuario en el dispositivo",
            offlineTerms: "No hay internet para aceptar los términos y condiciones. Intente más tarde",
            offlineNoTerms: "No hay internet para aceptar los términos y condiciones",
            language: "Idioma",
            spanish: "Español",
            english: "Inglés",
			placeholderUser: "Correo Electrónico",
        },
        welcome: {
            title: "ModoSeguro a un Clic",
            message: "Identifica, protege y actúa\nfrente a la trata de personas en\nentornos digitales.",
        },
        forgot: {
...
            p1:
                "Sus respuestas son confidenciales y serán utilizadas de forma anónima para fines de investigación y mejora de la aplicación. Su privacidad es nuestra máxima prioridad.",
            p2:
                "Al continuar, usted confirma que ha leído y entendido la información anterior y es consciente en participar.",
            link:
                "Aceptar. Términos & condiciones\ny políticas de privacidad",
            continue: "Continuar",
            reject: "Rechazar",
            modalTitle: "Términos y Condiciones",
            close: "Cerrar",
            warn: "Advertencia",
            serverError: "Error en el servidor\nContacte al Administrador",
            noInternet: "No hay internet para aceptar los terminos y condiciones",
...
            riskMin: "Nivel de Riesgo Mínimo",
            riskLow: "Nivel de Riesgo Bajo",
            riskHigh: "Nivel de Riesgo Significativo",
        },
        routes: {
            title: "CANALES y REPORTES",
            download: "Descargar",
			description: "Descripcion",
			  instructions: [
				"Se pueden realizar mediante la Línea 141, las 24 horas del día y los siete días de la semana, o por cualquiera de nuestros canales de atención en los siguientes horarios:",
				"Chat ICBF: Lunes a sábado de 8:00 a.m. a 6:00 p.m.",
				"Página Web: www.icbf.gov.co",
				"WhatsApp: 320 239 16 85; de lunes a viernes de 8:00 a.m. a 5:00 p.m.",
...
        instruction: {
            usageTitle: "Instrucciones de uso:",
            continue: "Continuar",
        },
        assent: {
            title: "ASENTIMIENTO\nINFORMADO",
            accept: "Aceptar",
            reject: "Rechazar",
        },

        assentReject: {
            title: "NO ES POSIBLE\nCONTINUAR",
            p1:
...
            warning: "Advertencia",
            fillAll: "Completa todos los campos",
            exitInterview: "¿DESEA SALIR DE LA ENTREVISTA?",
            reasonPlaceholder:"Por favor, indícanos el motivo antes de continuar",
            accept: "Aceptar",
            cancel: "Cancelar",
            next: "Siguiente",
            save: "Guardar",
            viewResults: "Ver Resultados",
            confirmation: "Confirmación",
            confirmFinish:"¿Está seguro de guardar y finalizar la entrevista?",
            yes: "Sí",
            no: "No",
            observationPlaceholder: "Puede indicar una observación",
            observacionTitulo: "¿Qué redes sociales, videojuegos o plataformas utiliza el niño, niña o adolescente? Incluya también otras observaciones o información relevante.",
			offline: "Sin acceso a internet",	
		    stateReason: "Debe indicar el motivo",
			finishTitle: "¿Deseas finalizar la entrevista?",
			finishWord1: "Al seleccionar",
			finishWord2: "“Sí”",
			finishWord3: ", la información registrada se guardará y",
			finishWord4: "no podrá ser modificada posteriormente.",
			finishAcept: "Sí, finalizar",
			finishCancel: "Volver y revisar",
        },

        stepOne: {
            title: "ENTREVISTA",
            birthDate: "Fecha de nacimiento",
            selectDate: "Seleccionar fecha",
            gender: "Género",
            victimConflict: "Víctima de conflicto",
            displaced: "Ha sido víctima de desplazamiento forzado",
            migrant: "Migrante",
            migrantType: "Es migrante",
            ethnicity: "Pertenencia étnico-campesina",
            disability: "Discapacidad",
            schooled: "Escolarizado",
            schoolAttendance: "Asiste regularmente a la escuela/colegio",
            grade: "Grado Escolar",
            nationality: "Nacionalidad",
            department: "Departamento de Residencia",
            municipality: "Municipio de Residencia",
            zone: "Zona",
            urban: "Urbano",
            rural: "Rural",
            yes: "Sí",
            no: "No",
            permanent: "Permanente",
            transit: "En tránsito",
            select: "Seleccione...",
            selectDepartment: "Seleccione departamento",
            selectMunicipality: "Seleccione municipio",
			notApplicable: "No aplica",
			mustBe18: "Debes ser menor a 18 años",
            mustBeAge: "El niño/a debe tener al menos {{count}} años",
			searchEthnicity: "Buscar étnico-campesina..",
...
			searchDepartment: "Buscar departamento..",
			searchMunicipality: "Buscar municipio..",
        },
		
		stepThree: {
		  title: "RESULTADO DE\nLA ENTREVISTA",
		  scoresByCategory: "Puntajes por categoría",
		  totalScore: "Puntuación Total",
		  riskLevel: "Nivel de Riesgo",
		  recommendations: "Recomendaciones",
		  download: "Descargar",
		},
		
		footer: {
			home:"Inicio",
			interview:"Entrevista",
...
