...
        const result = await apiPost(url, body);
        setLoading(false);

        if (result.success) {
          Alert.alert(t("forgot.title"), t("forgot.infoOK"), [
            {
              text: "OK",
              onPress: () => navigation.replace("Login"),
            },
          ]);
        } else {
          Alert.alert(t("forgot.warn"), t("forgot.serverError"));
        }
...
